@@ -3866,8 +3866,10 @@ current_logtalk_flag(version, version(2, 44, 0)).
 	':'(Module, Goal).
 
 '$lgt_metacall'(Goal, MetaCallCtx, Prefix, Sender, This, Self) :-
-	(	\+ '$lgt_member'(Goal, MetaCallCtx),
-	 	\+ '$lgt_member'(_^Goal, MetaCallCtx) ->
+	(	\+ (	'$lgt_member'(QMetaCall, MetaCallCtx),
+				'$lgt_decompose_existentially_quantified_goal'(QMetaCall, MetaCall),
+				Goal = MetaCall
+	 	) ->
 		'$lgt_metacall_this'(Goal, Prefix, Sender, This, Self)
 	;	'$lgt_metacall_sender'(Goal, Sender, This, [])
 	).
@@ -9638,8 +9640,8 @@ current_logtalk_flag(version, version(2, 44, 0)).
 	'$lgt_comp_ctx'(Ctx, Head, Sender, This, Self, Prefix, MetaVars, MetaCallCtx, ExCtx, Mode, Stack),
 	(	var(QGoal), '$lgt_member_var'(QGoal, MetaVars) ->
 		'$lgt_comp_ctx'(Ctx2, Head, Sender, This, Self, Prefix, [Goal| MetaVars], MetaCallCtx, ExCtx, Mode, Stack),
-		TPred = ('$lgt_decompose_existentially_quantified_goal'(QGoal, Vars, Goal), bagof(Term, Vars^TGoal, List)),
-		DPred = ('$lgt_decompose_existentially_quantified_goal'(QGoal, Vars, Goal), bagof(Term, Vars^DGoal, List)),
+		TPred = ('$lgt_decompose_existentially_quantified_goal'(QGoal, Goal, TQGoal, TGoal), bagof(Term, TQGoal, List)),
+		DPred = ('$lgt_decompose_existentially_quantified_goal'(QGoal, Goal, TQGoal, TGoal), bagof(Term, TQGoal, List)),
 		'$lgt_tr_body'(Goal, TGoal, DGoal, Ctx2)
 	;	TPred = bagof(Term, TGoal, List),
 		DPred = bagof(Term, DGoal, List),
@@ -9663,8 +9665,8 @@ current_logtalk_flag(version, version(2, 44, 0)).
 	'$lgt_comp_ctx'(Ctx, Head, Sender, This, Self, Prefix, MetaVars, MetaCallCtx, ExCtx, Mode, Stack),
 	(	var(QGoal), '$lgt_member_var'(QGoal, MetaVars) ->
 		'$lgt_comp_ctx'(Ctx2, Head, Sender, This, Self, Prefix, [Goal| MetaVars], MetaCallCtx, ExCtx, Mode, Stack),
-		TPred = ('$lgt_decompose_existentially_quantified_goal'(QGoal, Vars, Goal), setof(Term, Vars^TGoal, List)),
-		DPred = ('$lgt_decompose_existentially_quantified_goal'(QGoal, Vars, Goal), setof(Term, Vars^DGoal, List)),
+		TPred = ('$lgt_decompose_existentially_quantified_goal'(QGoal, Goal, TQGoal, TGoal), setof(Term, TQGoal, List)),
+		DPred = ('$lgt_decompose_existentially_quantified_goal'(QGoal, Goal, TQGoal, TGoal), setof(Term, TQGoal, List)),
 		'$lgt_tr_body'(Goal, TGoal, DGoal, Ctx2)
 	;	TPred = setof(Term, TGoal, List),
 		DPred = setof(Term, DGoal, List),
@@ -10882,19 +10884,35 @@ current_logtalk_flag(version, version(2, 44, 0)).
 
 
 
-% '$lgt_decompose_existentially_quantified_goal'(@callable, -term, -callable)
+% '$lgt_decompose_existentially_quantified_goal'(@callable, -callable, -callable, -callable)
 %
 % decompose a ^/2 goal (used with bagof/3 and setof/3)
 
-'$lgt_decompose_existentially_quantified_goal'(Goal, [], Goal) :-
+'$lgt_decompose_existentially_quantified_goal'(Goal, Goal, TGoal, TGoal) :-
 	var(Goal),
 	!.
 
-'$lgt_decompose_existentially_quantified_goal'(Var^Term, [Var| Vars], Goal) :-
+'$lgt_decompose_existentially_quantified_goal'(Var^Term, Goal, Var^TTerm, TGoal) :-
 	!,
-	'$lgt_decompose_existentially_quantified_goal'(Term, Vars, Goal).
+	'$lgt_decompose_existentially_quantified_goal'(Term, Goal, TTerm, TGoal).
 
-'$lgt_decompose_existentially_quantified_goal'(Goal, [], Goal).
+'$lgt_decompose_existentially_quantified_goal'(Goal, Goal, TGoal, TGoal).
+
+
+
+% '$lgt_decompose_existentially_quantified_goal'(@callable, -callable)
+%
+% decompose a ^/2 goal (used with bagof/3 and setof/3)
+
+'$lgt_decompose_existentially_quantified_goal'(Goal, Goal) :-
+	var(Goal),
+	!.
+
+'$lgt_decompose_existentially_quantified_goal'(_^Term, Goal) :-
+	!,
+	'$lgt_decompose_existentially_quantified_goal'(Term, Goal).
+
+'$lgt_decompose_existentially_quantified_goal'(Goal, Goal).
 
 
 
